<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddPlantActivity">

    <Spinner
        android:id="@+id/spinner_PreferredLight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="Preferred Light"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_PreferredLightLevels" />

    <TextView
        android:id="@+id/textView_PreferredLightLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Preferred Amount of Light"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_PreferredMoisture" />

    <TextView
        android:id="@+id/textView_PlantNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Plant Details"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_PlantName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Plant Name"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_PlantNameLabel" />

    <Spinner
        android:id="@+id/spinner_PlantType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="Plant Type"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_PlantTypeLabel" />

    <Button
        android:id="@+id/button_AddPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/primary_button"
        android:onClick="onButtonAddPlantClicked"
        android:text="Add Plant"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cameraBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView_plantPhoto" />

    <ImageView
        android:id="@+id/imageView_plantPhoto"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:tooltipText="Preview of plant photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_MaxTemp"
        app:srcCompat="@drawable/ic_flower_alt" />

    <Button
        android:id="@+id/cameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/secondary_button"
        android:onClick="onButtonTakePhotoClick"
        android:text="Take Photo"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/button_AddPlant"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_plantPhoto" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraBtn" />

    <TextView
        android:id="@+id/textView_PlantTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Plant Type"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_PlantName" />

    <TextView
        android:id="@+id/textView_PreferredMoistureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Preferred Soil Moisture"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_PlantType" />

    <Spinner
        android:id="@+id/spinner_PreferredMoisture"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="Preferred Soil Moisture"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_PreferredMoistureLabel" />

    <TextView
        android:id="@+id/textView_PreferredTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Preferred Temperatures"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_PreferredLight" />

    <SeekBar
        android:id="@+id/seekBar_MaxTemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="60"
        android:min="-10"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="@+id/textView_PreferredTempLabel"
        app:layout_constraintStart_toStartOf="@+id/textView_PreferredTempLabel"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_MinTemp" />

    <TextView
        android:id="@+id/textView_MinTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Min."
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/seekBar_MinTemp"
        app:layout_constraintTop_toTopOf="@+id/seekBar_MinTemp" />

    <SeekBar
        android:id="@+id/seekBar_MinTemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="60"
        android:min="-10"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="@+id/textView_PreferredTempLabel"
        app:layout_constraintStart_toStartOf="@+id/textView_PreferredTempLabel"
        app:layout_constraintTop_toBottomOf="@+id/textView_PreferredTempLabel" />

    <TextView
        android:id="@+id/textView_MaxTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Max."
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/seekBar_MaxTemp"
        app:layout_constraintTop_toTopOf="@+id/seekBar_MaxTemp" />

    <TextView
        android:id="@+id/textView_MinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0°C"
        app:layout_constraintStart_toEndOf="@+id/seekBar_MinTemp"
        app:layout_constraintTop_toTopOf="@+id/seekBar_MinTemp" />

    <TextView
        android:id="@+id/textView_MaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0°C"
        app:layout_constraintStart_toEndOf="@+id/seekBar_MaxTemp"
        app:layout_constraintTop_toTopOf="@+id/seekBar_MaxTemp" />

</androidx.constraintlayout.widget.ConstraintLayout>